# cs100_finalproject

./: .gitignore  CMakeCache.txt  CMakeLists.txt  IMDB-Movie-Data.csv  Makefile  Menu.cpp  Menu.h  README.md  Scan.cpp  Scan.hpp  Strat.hpp  base.cpp  base.hpp  base_test.hpp  category.cpp  category.hpp  cmake_install.cmake  display.cpp  display.hpp  display_test.hpp  genre.hpp  main.cpp  main2.cpp  mainFunctions.cpp  mainFunctions.hpp  menu.cpp  menu.h  menu.hpp  movie.cpp  movie.hpp  movieSorting.hpp  rating_sort.hpp  recommend.hpp  recommend_genre.hpp  recommendation.hpp  stratDisp.cpp  stratDisp.hpp  test  unit_test.cpp  unit_tests.cpp
